--- a/store.html
+++ b/store.html
@@ -413,7 +413,7 @@ html, body {
 .placeholder-img {
   position: relative;
   min-height: 100%;
-  background: rgba(212,175,55,0.08);
+ background: #000;
 }
 
 
