--- a/store.html
+++ b/store.html
@@ -371,8 +371,8 @@ html, body {
   top: 0;
   left: 0;
   right: 0;
-  background: #ffffff;
-  color: #ff3b3b;
+  background: #111111;
+  color: #111111;
   font-size: 0.6rem;
   letter-spacing: 0.32em;
   text-align: center;
@@ -413,7 +413,7 @@ html, body {
 .placeholder-img {
   position: relative;
   min-height: 100%;
- background: #000;
+ background: #111111;
 }
 
 
