--- a/store.html
+++ b/store.html
@@ -3,106 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EPÒK | About</title>
+<title>EPÒK | Universal Page</title>
 
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+html, body {
+    width:100%;
+    height:100%;
     background:#000;
     color:#f2f2f2;
-    overflow-x:hidden;
-}
-
-/* ============ DOUBLE ROYAL FRAME (FULL PAGE) ============ */
-.page-frame-outer {
-    min-height:100vh;
-    padding:22px;
-    background:#000;
-    border:2px solid rgba(212,175,55,0.65);
-    position:relative;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     overflow:hidden;
 }
 
-.page-frame-outer::before,
-.page-frame-outer::after {
-    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
-    position:absolute;
-    top:22px;
-    bottom:22px;
-    width:22px;
-    writing-mode:vertical-rl;
-    text-orientation:mixed;
-    font-size:0.65rem;
-    letter-spacing:0.35em;
-    color:#ffffff;
-    pointer-events:none;
-    white-space:nowrap;
-}
-
-.page-frame-outer::before {
-    left:1px;
-    animation:leftScroll 45s linear infinite;
-}
-@keyframes leftScroll {
-    from { transform:translateY(100%); }
-    to { transform:translateY(-100%); }
-}
-
-.page-frame-outer::after {
-    right:9px;
-    animation:rightScroll 45s linear infinite;
-}
-@keyframes rightScroll {
-    from { transform:translateY(-100%); }
-    to { transform:translateY(100%); }
-}
-
-/* BOTTOM ARABIC */
-.page-frame-outer .arabic-border {
-    position:absolute;
-    bottom:6px;
-    left:0;
-    right:0;
-    text-align:center;
-    font-size:0.7rem;
-    letter-spacing:0.45em;
-    color:#ffffff;
-    pointer-events:none;
-    white-space:nowrap;
-}
-
-.page-frame-outer .arabic-border span {
-    display:inline-block;
-    padding-left:100%;
-    animation:arabic-scroll 18s linear infinite;
-}
-@keyframes arabic-scroll {
-    from { transform:translateX(0); }
-    to { transform:translateX(-100%); }
-}
-
-.page-frame-inner {
-    min-height:100vh;
-    padding:0 6vw 140px;
-    border:1px solid rgba(212,175,55,0.35);
-    box-shadow:
-        inset 0 0 0 1px rgba(212,175,55,0.18),
-        0 40px 120px rgba(0,0,0,0.95);
-    background:#000;
-}
-
-/* ================= TOP NAV ================= */
+/* ================= TOP NAV (VERBATIM) ================= */
 .top-nav {
     position:fixed;
     top:0;
     left:0;
     width:100%;
     height:64px;
-    display:flex;
-    align-items:center;
-    background:rgba(0,0,0,0.88);
+    background:rgba(0,0,0,0.85);
     backdrop-filter:blur(10px);
     z-index:1000;
     border-bottom:1px solid rgba(212,175,55,0.25);
@@ -110,11 +32,18 @@ body {
 
 .nav-scroll {
     width:100%;
+    height:100%;
     overflow-x:auto;
+    overflow-y:hidden;
     white-space:nowrap;
+    -webkit-overflow-scrolling:touch;
     padding:0 6vw;
+    display:flex;
+    align-items:center;
 }
-.nav-scroll::-webkit-scrollbar { height:0; }
+
+.nav-scroll::-webkit-scrollbar { height:0px; }
+.nav-scroll { scrollbar-width:none; }
 
 .nav-links {
     display:inline-flex;
@@ -144,44 +73,117 @@ body {
     color:#f3d688;
 }
 
-
-    
-    /* ================= STORE MODULE ================= */
-
-.store-section {
-  margin-top: 120px;
+/* ============ DOUBLE ROYAL FRAME (LOCKED) ============ */
+.page-frame-outer {
+    position:fixed;
+    inset:0;
+    padding:22px;
+    border:2px solid rgba(212,175,55,0.65);
+    pointer-events:none;
+    z-index:50;
+    overflow:hidden;
 }
 
-.section-banner {
-  width: 100%;
-  height: 220px;
-  border: 1px solid rgba(212,175,55,0.35);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  letter-spacing: 0.28em;
-  text-transform: uppercase;
-  color: #f3d688;
+.page-frame-outer::before,
+.page-frame-outer::after {
+    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+    position:absolute;
+    top:22px;
+    bottom:22px;
+    width:22px;
+    writing-mode:vertical-rl;
+    text-orientation:mixed;
+    font-size:0.65rem;
+    letter-spacing:0.35em;
+    color:#ffffff;
+    white-space:nowrap;
 }
 
-.section-banner small {
-  display: block;
-  margin-top: 12px;
-  font-size: 0.65rem;
-  letter-spacing: 0.24em;
-  color: #e8e4d8;
+.page-frame-outer::before {
+    left:1px;
+    animation:leftScroll 45s linear infinite;
 }
 
-.grid-label {
-  margin-top: 60px;
-  margin-bottom: 18px;
-  font-size: 0.75rem;
-  letter-spacing: 0.32em;
-  text-transform: uppercase;
-  color: #f3d688;
+.page-frame-outer::after {
+    right:9px;
+    animation:rightScroll 45s linear infinite;
 }
+
+@keyframes leftScroll {
+    from { transform:translateY(100%); }
+    to   { transform:translateY(-100%); }
+}
+
+@keyframes rightScroll {
+    from { transform:translateY(-100%); }
+    to   { transform:translateY(100%); }
+}
+
+.arabic-border {
+    position:absolute;
+    bottom:6px;
+    left:0;
+    right:0;
+    font-size:0.7rem;
+    letter-spacing:0.45em;
+    color:#ffffff;
+    white-space:nowrap;
+    overflow:hidden;
+    text-align:center;
+}
+
+.arabic-border span {
+    display:inline-block;
+    padding-left:100%;
+    animation:arabic-scroll 18s linear infinite;
+}
+
+@keyframes arabic-scroll {
+    from { transform:translateX(0); }
+    to { transform:translateX(-100%); }
+}
+
+/* ============ PAGE SCROLLER (LOCKED) ============ */
+.page-scroll {
+    position:fixed;
+    inset:0;
+    overflow-y:auto;
+    overflow-x:hidden;
+    z-index:1;
+    padding:22px;
+}
+
+.page-inner {
+    min-height:calc(100vh - 44px);
+    border:1px solid rgba(212,175,55,0.35);
+    box-shadow:
+        inset 0 0 0 1px rgba(212,175,55,0.18),
+        0 40px 120px rgba(0,0,0,0.95);
+    background:#000;
+    position:relative;
+    padding:88px 6vw 140px;
+}
+
+/* ============ MOBILE (LOCKED) ============ */
+@media (max-width:768px) {
+
+    .page-scroll { padding:14px; }
+    .page-inner { padding:78px 3vw 120px; }
+
+    .page-frame-outer { padding:14px; }
+
+    .page-frame-outer::before,
+    .page-frame-outer::after {
+        font-size:0.55rem;
+        letter-spacing:0.30em;
     }
+
+    .arabic-border {
+        font-size:0.6rem;
+        letter-spacing:0.30em;
+    }
+}
+
 
 
     
