--- a/store.html
+++ b/store.html
@@ -213,8 +213,7 @@ html, body {
 .product-card {
   border: 1px solid rgba(212,175,55,0.22);
   background: #000;              /* PURE BLACK */
-  height: auto;
-   min-height: 260px;
+  height: 260px;
   position: relative;
   flex: 0 0 240px;
   scroll-snap-align: start;
