--- a/store.html
+++ b/store.html
@@ -464,32 +464,23 @@ html, body {
   <div class="product-grid">
     <div class="product-card">
 
- <div class="placeholder-img">
-  <img src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png" alt="Product mockup">
-</div>
+<div class="product-wrap">
 
-<div class="product-actions">
+  <div class="product-card">
+    <div class="placeholder-img">
+      <img src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png" alt="Product mockup">
+    </div>
+  </div>
 
-  <div class="product-price">$120</div>
-
-  <button class="btn-save" data-product-id="52764320760126">
-    SAVE
-  </button>
-
-  <button class="btn-select" data-product-id="52764320760126">
-    SELECT
-  </button>
-
-  <a class="btn-checkout"
-     href="https://epok-8204.myshopify.com/cart/52764320760126:1">
-     CHECKOUT
-  </a>
+  <div class="product-actions">
+    <div class="product-price">$45.00</div>
+    <button class="btn-save">SAVE</button>
+    <button class="btn-select">SELECT</button>
+    <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
+  </div>
 
 </div>
 
-
-        
-</div> 
 
 
       
