--- a/store.html
+++ b/store.html
@@ -493,227 +493,225 @@ html, body {
 <div class="page-scroll">
     <div class="page-inner">
 
-<!-- ================= WINTER DROP ================= -->
 
-
-        
   <!-- WOMEN -->
 <!-- ================= WINTER DROP ================= -->
 <section class="winter-drop-section">
 
   <!-- ================= TOP WINTER DROP BANNER ================= -->
   <div class="drop-banner">
-    <div class="banner-placeholder">WINTER DROP — IMAGE PLACEHOLDER</div>
+    <div class="banner-placeholder">PATCH BABY — JOGGER DROP</div>
   </div>
 
-  <!-- ================= PATCH BABY JOGGER — WOMEN ================= -->
+  <!-- PATCH BABY JOGGER — WOMEN -->
   <h2 class="drop-title">PATCH BABY JOGGER — WOMEN</h2>
-  <div class="horizontal-scroll">
 
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
+<div class="horizontal-scroll">
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 1">
       </div>
     </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
     </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
   </div>
 
-  <!-- ================= PATCH BABY JOGGER — MEN ================= -->
-  <h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
-  <div class="horizontal-scroll">
-
-    <!-- 7 FULL PRODUCT BLOCKS -->
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 2">
       </div>
     </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
     </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
-    <div class="product-wrap">
-      <div class="product-card">
-        <div class="placeholder-img">
-          <img src="PLACEHOLDER.png" alt="Product mockup">
-        </div>
-      </div>
-      <div class="product-actions">
-        <div class="product-price">$</div>
-        <button class="btn-save">SAVE</button>
-        <button class="btn-select">SELECT</button>
-        <a class="btn-checkout" href="https://epok-8204.myshopify.com/cart/52764320760126:1">CHECKOUT</a>
-      </div>
-    </div>
-
   </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 3">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 4">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 5">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 6">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 7">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+</div>
+
+  <!-- PATCH BABY JOGGER — MEN -->
+ <h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
+
+<div class="horizontal-scroll">
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 1">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 2">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 3">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 4">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 5">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 6">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 7">
+      </div>
+    </div>
+    <div class="product-actions">
+      <div class="product-price">$</div>
+      <button class="btn-save">SAVE</button>
+      <button class="btn-select">SELECT</button>
+      <a class="btn-checkout" href="#">CHECKOUT</a>
+    </div>
+  </div>
+
+</div>
 
   <!-- ================= MID BANNER ================= -->
   <div class="drop-banner">
