--- a/store.html
+++ b/store.html
@@ -519,7 +519,7 @@ html, body {
 
   <div class="product-card">
     <div class="placeholder-img">
-      <img src="PLACEHOLDER.png" alt="">
+      <img src="PLACEHOLDER.png" alt="Streetwear Women Product 1">
     </div>
   </div>
 
