--- a/store.html
+++ b/store.html
@@ -505,7 +505,7 @@ html, body {
     
   <!-- ================= TOP WINTER DROP BANNER ================= -->
   <div class="drop-banner">
-    <div class="banner-placeholder">PATCH BABY — JOGGER DROP</div>
+    <div class="images/winterbanner.png">PATCH BABY — JOGGER DROP</div>
   </div>
 
   <!-- PATCH BABY JOGGER — WOMEN -->
@@ -519,7 +519,7 @@ html, body {
 
   <div class="product-card">
     <div class="placeholder-img">
-      <img src="PLACEHOLDER.png" alt="Streetwear Women Product 1">
+      <img src="images/babygirl.png" alt="                          ">
     </div>
   </div>
 
