--- a/store.html
+++ b/store.html
@@ -499,15 +499,14 @@ html, body {
 <section class="winter-drop-section">
 
  <!-- ================= Epok Banner ================= -->
-  <div class="drop-banner">
-    <div class="banner-placeholder"></div>
-  </div>
+<section class="about-banner">
+    <img src="images/titlebanner.png" alt="EPÒK — Survive. Rise. Become.">
+</section>
     
   <!-- ================= TOP WINTER DROP BANNER ================= -->
-  <div class="drop-banner">
-    <div class="images/winterbanner.png">PATCH BABY — JOGGER DROP</div>
-  </div>
-
+<section class="about-banner">
+    <img src="images/winterbanner.png" alt="EPÒK — Survive. Rise. Become.">
+</section>
   <!-- PATCH BABY JOGGER — WOMEN -->
   <h2 class="drop-title">PATCH BABY JOGGER — WOMEN</h2>
 
