--- a/store.html
+++ b/store.html
@@ -462,6 +462,29 @@ html, body {
     justify-content: center;
     letter-spacing: 0.32em;
   }
+
+ /* ================= ABOUT BANNER CENTERING ================= */
+.about-banner {
+    display:flex;
+    justify-content:center;
+}
+
+.about-banner img {
+    width:100%;
+    max-width:1600px;
+    display:block;
+}
+/* ================= SPACE BETWEEN FIXED NAV AND ABOUT BANNER ================= */
+.about-banner {
+    margin-top: 90px;
+}
+@media (max-width:768px) {
+    .about-banner {
+        margin-top: 80px;
+    }
+}
+
+    
 </style>
 
 
