--- a/store.html
+++ b/store.html
@@ -1531,29 +1531,46 @@ html, body {
 </div>
 
 <script>
-/* STORE TAB SCROLL */
+/* ================= STORE TAB SCROLL ================= */
 document.querySelectorAll('.store-tab').forEach(tab => {
   tab.addEventListener('click', e => {
     e.preventDefault();
     const target = document.querySelector(tab.getAttribute('href'));
-    if (target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+    if (target) {
+      target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+    }
   });
 });
 
-/* SELECT (NO SIZE) */
+/* ================= SELECT BUTTON ================= */
 document.addEventListener("click", function (e) {
+
+  // SELECT CLICK
   if (e.target.classList.contains("btn-select")) {
-    const cartLink = e.target
-      .closest(".product-actions")
-      .querySelector(".add-to-cart");
-    if (cartLink) cartLink.click();
+    const actions = e.target.closest(".product-actions");
+    if (!actions) return;
+
+    const sizeBox = actions.querySelector(".size-popup");
+    const cartLink = actions.querySelector(".add-to-cart");
+
+    // NO SIZE PRODUCT (ex: beanie)
+    if (!sizeBox && cartLink) {
+      fetch(cartLink.href + ".js", { method: "POST" });
+      return;
+    }
+
+    // SIZE PRODUCT
+    if (sizeBox) {
+      sizeBox.style.display = "flex";
+    }
   }
+
 });
 
-/* DOM READY */
+/* ================= DOM READY ================= */
 document.addEventListener("DOMContentLoaded", () => {
 
-  /* SAVE — ONE TIME ONLY */
+  /* ===== SAVE (DO NOT TOUCH) ===== */
   document.querySelectorAll(".btn-save").forEach(btn => {
     btn.addEventListener("click", () => {
       const wrap = btn.closest(".product-wrap");
@@ -1566,10 +1583,29 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   });
 
+  /* ===== SIZE SELECTION (ADD TO CART, NO REDIRECT) ===== */
+  document.querySelectorAll(".size-popup button").forEach(sizeBtn => {
+    sizeBtn.addEventListener("click", () => {
+      const variantId = sizeBtn.getAttribute("data-variant");
+      if (!variantId) return;
+
+      fetch("/cart/add.js", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          id: variantId,
+          quantity: 1
+        })
+      });
+
+      // close size popup after add
+      const popup = sizeBtn.closest(".size-popup");
+      if (popup) popup.style.display = "none";
+    });
+  });
+
 });
 </script>
 
-    
-    
 </body>
 </html>
